Перенес же скрипт автодополнения

--- a/templates/_admin/lists.item.sm.html
+++ b/templates/_admin/lists.item.sm.html
@@ -98,7 +98,7 @@
 </table>
 
 
-<script src="/js/jquery.autocomplete.min.js"></script>
+<script src="/addons/autocomplete/jquery.autocomplete.min.js"></script>
 <script>
     $(document).ready(function() {
         $('#list-add-name').autocomplete({
