Увеличиваем заголовок точки при показе в окне

--- a/templates/_pages/ajaxpoint.show.sm.html
+++ b/templates/_pages/ajaxpoint.show.sm.html
@@ -1,7 +1,7 @@
 <div class="simplewindow">
 
     <div id="object_container">
-        <h2>{$object.pt_name}</h2>
+        <h2 class="m_larger">{$object.pt_name}</h2>
         <div id="object_text_container">
             <div id="object_text">
                 {$object.pt_description}
