--- a/css/common-layout.css
+++ b/css/common-layout.css
@@ -210,6 +210,10 @@ h2, .h2 {
     color: #bbbbbb;
     overflow: hidden;
 }
+h2.m_larger, .h2.m_larger {
+    font-size: 17px;
+    padding: 1px 0 1px 6px;
+}
 h3 {
     display:block;
     clear:both;
