При редактировании заголовок тоже поправим, see #27

--- a/templates/_pages/ajaxpoint.add.sm.html
+++ b/templates/_pages/ajaxpoint.add.sm.html
@@ -1,5 +1,5 @@
 <div class="simplewindow">
-    <input type="text" id="pt_name_add" class="h2 hiddenedit_active" />
+    <input type="text" id="pt_name_add" class="h2 hiddenedit_active m_larger" />
     <hr />
     <textarea id="pt_description_add" class="hiddenedit_active" style="height:350px;"></textarea>
 
