--- a/templates/_pages/ajaxpoint.edit.sm.html
+++ b/templates/_pages/ajaxpoint.edit.sm.html
@@ -1,7 +1,7 @@
 <div class="simplewindow">
     <input type="hidden" id="pt_id" value="{$object.pt_id}" />
     <h2 id="pt_name_hidd" class="hiddenedit">{$object.pt_name}</h2>
-    <input type="text" id="pt_name_edit" class="h2" style="display:none;width: 100%" />
+    <input type="text" id="pt_name_edit" class="h2 m_larger" style="display:none;width: 100%" />
     <div class="formhandler" id="pt_name_handler">
         <input type="button" value="сохранить" class="dosave" />
         <input type="button" value="отменить" class="doesc" />
