--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -51,7 +51,9 @@
                                             <input type="text" id="search_mainform_q" name="q" value="" placeholder="Поиск" />
                                         </form>
                                     </li>
-                                    <li id="mainmenu_item_7"><a id="show_auth_form" href="/sign/in/" title="Вход" rel="nofollow">&#x25bc;</a></li>
+                                    <li id="mainmenu_item_7"><a id="show_auth_form" href="/sign/in/" title="Вход" rel="nofollow">
+                                            <img src="/img/elements/lock-32.png" />
+                                        </a></li>
                                 </ul>
                             </div>
                         </header><!-- #header-->
