В поиске аналогов - максимум 10 результатов, see #12

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -109,6 +109,7 @@
                 pname: pname
             }, function (data) {
                 if (data.state) {
+                    console.log(data);
                     $.each(data.founded, function (item) {
                         $(".pointadding-item-analogs-list").append("<li>" + item.title + "</li>");
                     });
