--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -110,8 +110,8 @@
             }, function (data) {
                 if (data.state) {
                     console.log(data);
-                    $.each(data.founded, function (item) {
-                        $(".pointadding-item-analogs-list").append("<li>" + item.title + "</li>");
+                    $.each(data.founded, function (i, item) {
+                        $(".pointadding-item-analogs-list").append("<li>" + item.title.replace(" | Культурный туризм", "") + "</li>");
                     });
                 } else {
                     $(".pointadding-item-analogs-error").text(data.error);
