Помарки верстки формы, see #12

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -46,7 +46,7 @@
         <td>
             <input type="text" value="{$claim.cp_addr}" class="m_width_full" />
         </td>
-        <td>
+        <td class="m_center">
             <input type="button" class="pointadding-item-geo-set m_hide" value="GPS" />
             <input type="button" class="pointadding-item-geo-change m_hide" value="N55.72851 E37.64223" />
         </td>
