Уползал блок с рекламой Яндекса

--- a/css/common-layout.css
+++ b/css/common-layout.css
@@ -244,6 +244,9 @@ ol {
     margin: 0 3em 18px;
 }
 
+#yandex_ad {
+    clear:both;
+}
 
 /* Footer
 -----------------------------------------------------------------------------*/
