--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -30,10 +30,9 @@
     <tr>
         <th>Регион</th>
         <td>
-            <a href="#" class="pointadding-item-city-typed" title="Как ввел пользователь">{$claim.cp_city}</a>
+            <a href="#" class="pointadding-item-city-typed" title="Как ввел пользователь">{$claim.cp_city} =></a>
             <input type="hidden" id="pointadding-item-city-pcid" value="{$claim.cp_citypage_id}" />
             <input type="text" class="pointadding-item-city-suggest m_hide" value="{$claim.cp_city}" />
-            =>
             <span class="pointadding-item-city-pctitle"></span>
         </td>
     </tr>
