--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -8,17 +8,19 @@
         <th>Регион</th>
         <th>Страница</th>
         <th>Название</th>
+        <th>GPS</th>
         <th>Статус</th>
         <th>&nbsp;</th>
     </tr>
     {foreach from=$list item=req}
     <tr>
-        <td>{$req.cp_date}</td>
-        <td>&nbsp;</td>
+        <td>{$req.cp_date|date_format:"%d.%m.%Y"}</td>
+        <td title="{$req.type_title}" class="m_center"><img src="/img/points/x16/{$req.type_icon}"/></td>
         <td>{$req.cp_city}</td>
-        <td>&nbsp;</td>
+        <td>{$req.page_title}</td>
         <td>{$req.cp_title}</td>
-        <td>&nbsp;</td>
+        <td>{if $req.cp_latitude && $req.cp_longitude}есть{else}нет{/if}</td>
+        <td>{$req.state_title}</td>
         <td><a href="?id={$req.cp_id}"><img src="/img/btn/btn.tick.png"</a></td>
     </tr>
     {/foreach}
