--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -40,6 +40,8 @@
             N<input type="text" id="pointadding-item-geo-lat" value="{$claim.cp_latitude}" />
             E<input type="text" id="pointadding-item-geo-lon" value="{$claim.cp_longitude}" />
             <input type="button" class="pointadding-item-geo-set" value="MAP" data-mapstate="0" />
+            <input type="button" class="pointadding-item-geo-go m_hide" value="GO" />
+            <input type="button" class="pointadding-item-geo-get m_hide" value="FIND" />
         </td>
     </tr>
     <tr>
@@ -99,151 +101,7 @@
 </table>
 
 <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat" defer="defer"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        var item_id = $("#pointadding-item-id").val();
-        var item_latitude = $("#pointadding-item-geo-lat").val();
-        var item_longitude = $("#pointadding-item-geo-lon").val();
-        if (item_latitude != null && item_longitude != null) {
-            $(".pointadding-item-geo-change").removeClass("m_hide");
-        } else {
-            $(".pointadding-item-geo-set").removeClass("m_hide");
-        }
-        $('#pointadding-item-city-pcid').change(function () {
-            $.getJSON("addpoints.php", {
-                act: "get_citypage",
-                id: item_id,
-                pc_id: $("#pointadding-item-city-pcid").val()
-            }, function (data) {
-                if (data.state) {
-                    $(".pointadding-item-city-pctitle").text(data.citypage.pc_title);
-                } else {
-                    console.log("error", data);
-                }
-            });
-        });
-        if ($("#pointadding-item-city-pcid").val() !== 0) {
-            $("#pointadding-item-city-pcid").change();
-        }
-        $(".pointadding-item-analogs-run").click(function () {
-            // поиск аналогов, добавленных ранее
-            var pname = $(".pointadding-item-title").val();
-            $(".pointadding-item-analogs-error").empty();
-            $(".pointadding-item-analogs-list").empty();
-            $.getJSON("addpoints.php", {
-                act: "get_analogs",
-                id: item_id,
-                pname: pname
-            }, function (data) {
-                if (data.state) {
-                    console.log(data);
-                    $.each(data.founded, function (i, item) {
-                        $(".pointadding-item-analogs-list").append("<li>" + item.title.replace(" | Культурный туризм", "") + "</li>");
-                    });
-                } else {
-                    $(".pointadding-item-analogs-error").text(data.error);
-                }
-            });
-            return false;
-
-        });
-        $(".pointadding-item-city-typed").click(function () {
-            // подбор страницы для размещения точки
-            $(".pointadding-item-city-typed").hide();
-            $(".pointadding-item-city-suggest").show().focus();
-            $(".pointadding-item-city-suggest").blur(function () {
-                $(".pointadding-item-city-suggest").hide();
-                $(".pointadding-item-city-typed").show();
-            });
-            return false;
-        });
-        $(".pointadding-item-geo-set").click(function () {
-            // указание координат по карте
-            if ($(this).data("mapstate") == 0) {
-                $(this).data("mapstate", 1);
-                $(".pointadding-item-textcontainer").addClass("m_hide");
-                $(".pointadding-item-mapcontainer").removeClass("m_hide");
-            } else {
-                $(this).data("mapstate", 0);
-                $(".pointadding-item-textcontainer").removeClass("m_hide");
-                $(".pointadding-item-mapcontainer").addClass("m_hide");
-            }
-
-        });
-        $(".pointadding-item-select-type").click(function () {
-            //выбор типа точки
-            var ptype = $(this).data("value");
-            $.getJSON("addpoints.php", {
-                act: "set_type",
-                id: item_id,
-                ptype: ptype
-            }, function (data) {
-                if (data.state) {
-                    $(".pointadding-item-select-type").each(function (item) {
-                        $(this).removeClass("m_active");
-                        if ($(this).data("value") == data.data.cp_type_id) {
-                            $(this).addClass("m_active");
-                        }
-                    });
-                } else {
-                    console.log("error", data);
-                }
-            });
-            return false;
-        });
-        $(".pointadding-item-confirm").click(function () {
-            //сохранение точки в базу
-            $.post("addpoints.php?act=save_candidate&id=" + $("#pointadding-item-id").val(), {
-                title: $(".pointadding-item-title").val(),
-                text: $(".pointadding-item-text").val(),
-                addr: $(".pointadding-item-addr").val(),
-                phone: $(".pointadding-item-phone").val(),
-                worktime: $(".pointadding-item-worktime").val(),
-                web: $(".pointadding-item-web").val()
-            }, function (answer) {
-                if (answer.state) {
-                    document.location.href = "addpoints.php";
-                }
-            });
-        });
-        $(".pointadding-item-city-suggest").autocomplete({
-            serviceUrl: "addpoints.php?act=citysuggest&id=" + item_id,
-            minChars: 2,
-            paramName: "query",
-            "width": 400,
-            onSelect: function (suggestion) {
-                $('#pointadding-item-city-pcid').val(suggestion.pcid);
-                $.getJSON("addpoints.php", {
-                    act: "set_citypage",
-                    id: item_id,
-                    pc_id: suggestion.pcid
-                }, function (data) {
-                    if (data.state) {
-                        $(".pointadding-item-city-pctitle").text(suggestion.value);
-                    } else {
-                        console.log("error", data);
-                    }
-                });
-            }
-        });
-        $("#pointadding-item-text").ckeditor({
-            customConfig: "/config/config.cke4.js",
-            height: '230px',
-            toolbar: "Lite"
-        });
-        ymaps.ready(function () {
-            var map = new ymaps.Map('pointadding-item-map', {
-                center: [$("#pointadding-item-geo-lon").val(), $("#pointadding-item-geo-lat").val()],
-                zoom: 7,
-                type: "yandex#publicMap",
-                controls: ["zoomControl", "typeSelector", "geolocationControl", "routeEditor", "fullscreenControl"]
-            }, {
-                minZoom: 1
-            });
-        });
-    });
-
-</script>
+<script type="text/javascript" src="/js/admin/addpoint.js" defer="defer"></script>
 
 <style type="text/css">
     .pointadding-item-select-type {
