Для имеющихся отправляем в игнор, see #12

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -22,6 +22,7 @@
         <td rowspan="4" class="h_valign_top">
             <ul class="pointadding-item-analogs-list"></ul>
             <div class="pointadding-item-analogs-error"></div>
+            <div class="pointadding-item-analogs-ignore m_center m_hide"><input type="button" value="искать" /></div>
             <div class="pointadding-item-analogs-run m_center"><input type="button" value="искать" /></div>
         </td>
     </tr>
@@ -89,11 +90,9 @@
             {$claim.cp_referer}
         </td>
     </tr>
-
-
     <tr>
         <td colspan="2" class="m_center">
-            <input type="button" class="pointadding-item-confirm" value="Сохранить">
+            <input type="button" class="pointadding-item-confirm" value="Сохранить" data-state="25">
             &nbsp;&nbsp;&nbsp;
             <a href="?">вернуться</a>
         </td>
