Еще и масштаб фиксируем, fix #12

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -40,6 +40,7 @@
         <td>
             N<input type="text" id="pointadding-item-geo-lat" value="{$claim.cp_latitude}" />
             E<input type="text" id="pointadding-item-geo-lon" value="{$claim.cp_longitude}" />
+            <input type="hidden" id="pointadding-item-geo-zoom" value="{$claim.cp_zoom}" />
             <input type="button" class="pointadding-item-geo-set" value="MAP" data-mapstate="0" />
             <input type="button" class="pointadding-item-geo-go m_hide" value="GO" />
             <input type="button" class="pointadding-item-geo-get m_hide" value="FIND" />
