--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -15,7 +15,7 @@
     {foreach from=$list item=req}
     <tr>
         <td>{$req.cp_date|date_format:"%d.%m.%Y"}</td>
-        <td title="{$req.type_title}" class="m_center"><img src="/img/points/x16/{$req.type_icon}"/></td>
+        <td title="{$req.type_title}" class="m_center"><img src="/img/points/x16/{$req.type_icon|default:'star.png'}"/></td>
         <td>{$req.cp_city}</td>
         <td>{$req.page_title}</td>
         <td>{$req.cp_title}</td>
